# Modest

./: CMakeLists.txt
include/mycss/values/: values.h
source/mycss/declaration/: serialization_resources.h
source/mycss/property/: parser.c
source/mycss/values/: values.h
